fix: add css variables for sizes and spacings

--- a/apps/web/src/styles/global.scss
+++ b/apps/web/src/styles/global.scss
@@ -1,3 +1,6 @@
+@use "spacing.scss";
+@use "sizes.scss";
+
 :root {
   --text-color: black;
   --accent-color: darkorange;
@@ -9,7 +12,7 @@
 }
 
 body {
-  font-size: 12px;
+  font-size: var(--size-m);
   background-color: var(--background-color);
   color: var(--text-color);
   margin: 0;
